# alfred3-reaction-times

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
src/alfred3_reaction_times/: __init__.py  _env.py  _version.py  hidden_input.py  keycodes.py  reaction_times.py  sequence_part.py  trial.py
src/alfred3_reaction_times/css/: layout.css
src/alfred3_reaction_times/js/: main.js
src/alfred3_reaction_times/templates/: Reaction.html.j2  ReactionTimes.html.j2  SequencePart.html.j2  Stimulus.html.j2  Trial.html.j2
tests/: script.py
