[metadata]
name = alfred3-reaction-times
version = 0.1.6
author = Marius Teller
author_email = marius.teller@psych.uni-goettingen.de
description = Alfred3 library for measurement of reaction times.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mate-code/alfred3-reaction-times
project_urls =
    Bug Tracker = https://github.com/mate-code/alfred3-reaction-times/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    alfred3>="2.3.1"
    jinja2>="2.11"
python_requires = >=3.7

[options.package_data]
alfred3_reaction_times = templates/*, css/*, js/*, static/*

[options.packages.find]
where = src